--- a/src/components/Layout/styles/_SideMenu.scss
+++ b/src/components/Layout/styles/_SideMenu.scss
@@ -22,7 +22,7 @@
 
   &_link {
     display: block;
-    font-size: 1.25rem;
+    font-size: 1.125rem;
     margin-bottom: 1rem;
     text-decoration: none;
     color: $color-text;
